--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Database
+database/data
+database/extensions
+database/uploads
+
 # dependencies
 /node_modules
 /.pnp
