--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "directus": "^11.1.0",
+    "lodash.template": "^4.5.0",
     "lucide-react": "^0.435.0",
     "next": "14.2.6",
     "next-auth": "^4.24.7",
@@ -38,6 +39,7 @@
     "react-hook-form": "^7.53.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.2",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
