--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next": "14.2.6",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "npm-check-updates": "^17.1.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
